--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ top blogs styles
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 25px;
-    column-gap: 45px;
+    column-gap: 35px;
 }
 .blog{
     display: flex;
@@ -93,14 +93,14 @@ courses styles
     column-gap: 25px;
 }
 .course{
-    width: 255px;
+    width: 245px;
     background-color: #f7f7fa;
     padding: 10px;
     border-radius: 10px;
     filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.1));
 }
 .course .banner img{
-    width: 250px;
+    width: 240px;
     height: 104px;
 }
 .course-info{
@@ -135,6 +135,12 @@ Responsive
     .container{
         width: 100%;  
     }
+    main{
+        overflow-x: hidden;
+    }
+    .title{
+        margin-left: 10px;
+    }
     .players, .blogs, .courses{
         grid-template-columns: repeat(1, 1fr);
         justify-items:  center;
@@ -152,5 +158,24 @@ Responsive
     }
     .course{
         margin-top: 15px;
+    }
+}
+@media screen and (min-width: 577px) and (max-width:992px){
+    .container{
+        width: 100%;
+    }
+    main{
+        overflow-x: hidden;
+    }
+    .title{
+        margin-left: 10px;
+    }
+    .players{
+        grid-template-columns: repeat(2, 1fr);
+        margin-left: 30px;
+    }
+    .courses{
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 5px;
     }
 }
